--- a/e-med/frontend/package.json
+++ b/e-med/frontend/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.10.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
